k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
    name: ${K8S_SERVICE}
    namespace: ${K8S_NAMESPACE}
spec:
    type: ClusterIP
    selector:
        app: ${K8S_DEPLOYMENT}
    ports:
        - protocol: TCP
          port: 80
          targetPort: 3000
