k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: ${K8S_DEPLOYMENT}-ingress
    namespace: ${K8S_NAMESPACE}
    annotations:
        cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
    ingressClassName: traefik
    tls:
        - hosts:
              - ${INGRESS_HOST}
          secretName: ${K8S_DEPLOYMENT}-tls
    rules:
        - host: ${INGRESS_HOST}
          http:
              paths:
                  - path: /
                    pathType: Prefix
                    backend:
                        service:
                            name: ${K8S_SERVICE}
                            port:
                                number: 80
